# cmake-example

./: .cproject  .project  CMakeLists.txt  LICENCE  README.md  conanfile.txt
apps/: CMakeLists.txt  app1.cc  app2.cc
circle/: CMakeLists.txt
circle/blue/: CMakeLists.txt  blue.c  blue.h  main.c
circle/green/: CMakeLists.txt  green.c  green.h  main.c
circle/libcircle/: CMakeLists.txt  circle.c  circle.h
cmake/: BuildTypeConfig.cmake  FindFreeGLUT.cmake
common/: CMakeLists.txt
common/libdisplay/: CMakeLists.txt  display.c  display.h
square/: CMakeLists.txt
square/libsquare/: CMakeLists.txt  square.c  square.h
square/red/: CMakeLists.txt  main.c  red.c  red.h
square/yellow/: CMakeLists.txt  main.c  yellow.c  yellow.h
src/: CMakeLists.txt
src/factorial/: CMakeLists.txt  factorial.cc
src/include/: factorial.h  mul.h  sub.h  sum.h
src/mul/: CMakeLists.txt  mul.cc
src/mul/private/: private_sum.cc  private_sum.h
src/sub/: CMakeLists.txt  sub.cc
src/sum/: CMakeLists.txt  sum.cc
tests/: CMakeLists.txt
tests/factorial/: CMakeLists.txt  factorial_test.cc
tests/mul/: CMakeLists.txt  mul_test.cc
tests/sub/: CMakeLists.txt  sub_test.cc
tests/sum/: CMakeLists.txt  sum_test.cc
